--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Website celebrating Marianne's birthday.">
 	<title>mariversaire</title>
 	<link href="/rsrc/images/birthday-cake.png" rel="icon" type="image/png">
-	<link href='https://fonts.googleapis.com/css?family=Alfa Slab One' rel='stylesheet'>
+	<link href="/rsrc/styles/fonts.css" rel="stylesheet">
 	<link href="/rsrc/styles/default.css" rel="stylesheet">
 	<script src="/src/lib.js"></script>
 </head>
