--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 			<div class="slot-machine-buffer"></div>
 		</div>
 	</div>
+	<div id="prizes"></div>
 	<script>
 		const motivation = document.getElementById("motivation");
 		const machine = document.getElementById("slot-machine");
@@ -51,9 +52,21 @@
 		const slot3 = document.getElementById("slot-3");
 		const handle = document.getElementById("slot-machine-lever-handle");
 		const ball = document.getElementById("slot-machine-lever-handle-ball");
+		const prizes = document.getElementById("prizes");
 		slot1.innerText = SLOT_VALUES.random();
 		slot2.innerText = SLOT_VALUES.random();
 		slot3.innerText = SLOT_VALUES.random();
+		if ((Number.parseInt(localStorage.getItem(LSKEY_SPINS)) - 2) >= PRIZES.at(-1) && !SLOT_VALUES.includes("💆")) {
+			SLOT_VALUES.push("💆");
+		}
+		for (const prize of PRIZES) {
+			if ((Number.parseInt(localStorage.getItem(LSKEY_SPINS)) - 2) >= prize) {
+				redeemPrize(SLOT_VALUES[Math.sqrt(prize) - 1]);
+			}
+			else {
+				break;
+			}
+		}
 	</script>
 </body>
 
