I don't like seeing 'index.html' personally

--- a/404.html
+++ b/404.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-	<h1>oops</h1>
-	<p>looks like nobody bothered to celebrate your birthday...</p>
+	<h1>oh no</h1>
+	<p>looks like nobody bothered to celebrate this particular birthday...</p>
 	<p>hopefully someone will think of you next year.</p>
 </body>
 
